[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Snapchat-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "roam",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 14.5011 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 95.1721, 14.3194 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9.03825, 10.3765 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.0304036, 0.824105 )
scale = Vector2( 0.812076, 0.812076 )
frames = SubResource( 3 )
animation = "roam"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.445953, 1.18921 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CheckBullet" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckBullet"]
shape = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="CheckBullet" to="." method="_on_CheckBullet_area_entered"]
[connection signal="area_exited" from="CheckBullet" to="." method="_on_CheckBullet_area_exited"]
